--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: hsl(212, 45%, 89%);
   padding: 5.6rem 1.74rem;
@@ -12,6 +18,8 @@ body {
   border-radius: 1.34rem;
   background-color: #fff;
   text-align: center;
+  max-width: 322px;
+  margin: 0 auto;
 }
 
 .card-container img {
@@ -19,14 +27,16 @@ body {
   border-radius: 0.67rem;
 }
 .card-container h2 {
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.2;
+  margin-top: 20px;
   letter-spacing: 1px;
   color: hsl(218, 44%, 22%);
 }
 .card-container p {
-  font-size: 1.3em;
-  width: 82%;
-  margin: 0 auto 2.6rem;
+  font-size: 1.1em;
+
+  margin-top: 20px;
+  margin-bottom: 2rem;
   color: hsl(220, 15%, 55%);
 }
